--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasetsV2.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasetsV2.html
@@ -3,6 +3,16 @@
 
 <head>
     <style>
+        .selected-dataset {
+            background-color: #e6e6e6;
+        }
+
+        .selectable-user:hover,
+        li:hover {
+            cursor: pointer;
+            background-color: #f5f5f5;
+        }
+
         .upload-form-group {
             margin-bottom: 15px;
         }
@@ -28,7 +38,7 @@
 </head>
 <div class="container-fluid">
     <div class="row" style="margin-top: 70px;">
-        <div class="col-5">
+        <div class="col-6">
             <div class="card shadow">
                 <div class="card-header">Upload Dataset</div>
                 <div class="card-body">
@@ -45,7 +55,6 @@
                                     <option value="Fluorescent">Fluorescent</option>
                                 </select>
                             </div>
-
                             <div class="upload-form-group">
                                 <label for="type">Exposure:<span class="required">*</span></label>
                                 <select id="exposure" name="type" class="form-control" required>
@@ -53,7 +62,7 @@
                                     <option value="0">0</option>
                                 </select>
                             </div>
-                            
+
                             <div class="upload-form-group">
                                 <label for="type">Wavelength:<span class="required">*</span></label>
                                 <select id="wavelength" name="type" class="form-control" required>
@@ -134,14 +143,189 @@
                 </div>
             </div>
         </div>
+        <div class="col-6">
+            <div class="card shadow">
+                <div class="card-header">Dataset Info</div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="card border-0">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-7">
+                                        <div class="upload-form-group">
+                                            <h5 class="card-title">Dataset List</h5>
+                                            <div id="datasetList" class="table table-striped table-hover"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-5">
+                                        <div class="upload-form-group">
+                                            <h5 class="card-title">Dataset Info</h5>
+                                            <div id="datasetInfo">
+                                                <!-- 数据将由JavaScript动态填充 -->
+                                            </div>
+                                            <div class="mt-3">
+                                                <button id="downloadDatasetBtn"
+                                                    class="btn btn-sm btn-primary btn-icon-only">
+                                                    <i class="fas fa-download"></i>
+                                                </button>
+                                                <button id="deleteDatasetBtn"
+                                                    class="btn btn-sm btn-danger ml-2 btn-icon-only">
+                                                    <i class="fas fa-trash"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.socket.io/3.0.3/socket.io.min.js"></script>
     <script>
-        document.getElementById('submitBtn').addEventListener('click', async function () {
-            
-            // disabel submitBtn
-            submitBtn.disabled = true;
+        let selectedDatasetName = "";
+        window.addEventListener("DOMContentLoaded", renderDatasetList())
+        function renderDatasetList() {
+            getDatasets().then(datasets => {
+                const datasetList = document.getElementById('datasetList');
+                datasetList.innerHTML = ''; // clear existing content
+                const ul = document.createElement('ul');
+                ul.classList.add('list-group');
 
+                datasets.forEach(dataset => {
+                    const li = document.createElement('li');
+                    li.classList.add('list-group-item');
+                    li.dataset.name = dataset.name;
+                    li.textContent = dataset.name;
+                    ul.appendChild(li)
+                });
+                datasetList.appendChild(ul);
+                ul.addEventListener('click', (event) => {
+                    const selectedLi = event.target.closest('li');
+                    if (selectedLi) {
+                        selectedDatasetName = selectedLi.dataset.name;
+                        console.log('Selected dataset:', selectedDatasetName);
+                        // Remove the selected-dataset class from all other li elements
+                        const allLiElements = document.querySelectorAll('#datasetList li');
+                        allLiElements.forEach((li) => {
+                            if (li !== selectedLi) {
+                                li.classList.remove('selected-dataset');
+                            }
+                        });
+                        // Add the selected-dataset class to the selected li element
+                        selectedLi.classList.add('selected-dataset');
+                        // Fetch data for the selected dataset
+                        fetch('/getDatasetsData', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json',
+                            },
+                            body: JSON.stringify({
+                                'datasetName': selectedDatasetName,
+                            }),
+                        })
+                            .then(response => response.json())
+                            .then(data => {
+                                // 为了简化，这里我们只显示一个JSON字符串，但你可以根据需要更优雅地显示数据
+                                updateDatasetList(data);
+                            })
+                            .catch((error) => {
+                                console.error('Error:', error)
+                            });
+                    }
+                });
+                // 若数据集列表非空，则模拟点击第一个数据集
+                if (datasets.length > 0) {
+                    const firstLi = ul.querySelector('li');
+                    firstLi.click();
+                }
+            });
+        }
+
+        document.getElementById("downloadDatasetBtn").addEventListener("click", function () {
+            if (selectedDatasetName) {
+                fetch('/downloadDataset', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({
+                        'datasetName': selectedDatasetName,
+                    }),
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        // 使用获得的URL自动触发下载
+                        window.location.href = data.download_url;
+                    })
+                    .catch(error => console.error('Error:', error));
+            } else {
+                alert("Please select a dataset first!");
+            }
+        });
+
+        // 监听删除按钮的点击事件
+        document.getElementById("deleteDatasetBtn").addEventListener("click", function () {
+            if (selectedDatasetName) {  // 确保有选择的数据集
+                const isConfirmed = confirm("Are you sure you want to delete this dataset? This action cannot be undone.");
+                if (isConfirmed) {
+                    fetch('/deleteDataset', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({
+                            'datasetName': selectedDatasetName,
+                        }),
+                    })
+                        .then(response => response.json())
+                        .then(data => {
+                            if (data.status === 'success') {
+                                // 更新数据集列表或其他所需操作
+                                renderDatasetList();
+                            } else {
+                                alert(data.message);
+                            }
+                        })
+                        .catch(error => console.error('Error:', error));
+                }
+            } else {
+                alert("Please select a dataset first!");
+            }
+        });
+
+
+
+
+
+        function updateDatasetList(data) {
+            const datasetInfoDiv = document.getElementById('datasetInfo');
+
+            // 清除现有内容
+            datasetInfoDiv.innerHTML = '';
+
+            data.forEach(dataset => {
+                const datasetDiv = document.createElement('div');
+
+                datasetDiv.innerHTML = `
+            <h6>Name: ${dataset.name}</h6>
+            <div><strong>Types:</strong> ${JSON.stringify(dataset.types)}</div>
+            <div><strong>Voxels:</strong> ${JSON.stringify(dataset.voxels)}</div>
+            <div><strong>Dims2:</strong> ${JSON.stringify(dataset.dims2)}</div>
+            <div><strong>Dims3:</strong> ${JSON.stringify(dataset.dims3)}</div>
+            <div><strong>Pixel Length:</strong> ${dataset.pixelLengthUM}</div>
+            <div><strong>Image Dims:</strong> ${JSON.stringify(dataset.imageDims)}</div>
+            <div><strong>Zskip:</strong> ${dataset.zskip}</div>
+            <div><strong>Info:</strong> ${JSON.stringify(dataset.info)}</div>
+        `;
+
+                datasetInfoDiv.appendChild(datasetDiv);
+            });
+        }
+
+        document.getElementById('submitBtn').addEventListener('click', async function () {
             const datasetNameInput = document.getElementById('dataset-name');
             const modality = document.getElementById('modality');
             const exposure = document.getElementById('exposure');
@@ -149,9 +333,6 @@
             const voxels_x = document.getElementById('voxels-x');
             const voxels_y = document.getElementById('voxels-y');
             const voxels_z = document.getElementById('voxels-z');
-            // const ImageDims_x = document.getElementById('ImageDims-x');
-            // const ImageDims_y = document.getElementById('ImageDims-y');
-            // const ImageDims_z = document.getElementById('ImageDims-z');
             const Dims2_x = document.getElementById('Dims2-x');
             const Dims2_y = document.getElementById('Dims2-y');
             const Dims2_z = document.getElementById('Dims2-z');
@@ -164,7 +345,6 @@
             const PI = document.getElementById('PI');
             const voxel_size = document.getElementById('voxel_size');
             const thickness = document.getElementById('thickness');
-
             const fileInputTiff = document.getElementById('fileInputTiff');
             const fileTiff = fileInputTiff.files[0];
             // Create an array containing all input boxes that need to be checked
@@ -177,7 +357,6 @@
                     return;
                 }
             }
-
             const formData = new FormData();
             formData.append('dataset-name', datasetNameInput.value);
             formData.append('modality', modality.value);
@@ -186,9 +365,6 @@
             formData.append('voxels_x', voxels_x.value);
             formData.append('voxels_y', voxels_y.value);
             formData.append('voxels_z', voxels_z.value);
-            // formData.append('ImageDims_x', ImageDims_x.value);
-            // formData.append('ImageDims_y', ImageDims_y.value);
-            // formData.append('ImageDims_z', ImageDims_z.value);
             formData.append('Dims2_x', Dims2_x.value);
             formData.append('Dims2_y', Dims2_y.value);
             formData.append('Dims2_z', Dims2_z.value);
@@ -203,7 +379,6 @@
             formData.append('thickness', thickness.value);
             formData.append('FileName', fileTiff.name);
             formData.append('fileContent', fileTiff); // Add the file content here
-
 
             var fileExtension = fileInputTiff.files[0].name.split('.').pop().toLowerCase(); // Get file extension name
             if (fileExtension !== 'tif') {
@@ -272,8 +447,5 @@
                     console.error('Fetch error:', error);
                 });
         }
-
-
-
     </script>
     {% endblock %}
