--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
@@ -21,7 +21,6 @@
             overflow-y: auto;
         }
 
-
         .selected-dataset,
         .selected-user {
             background-color: #e6e6e6;
@@ -76,7 +75,7 @@
                         </div>
                     </div>
                 </div>
-                <button id="deleteUserBtn" type="submit" class="btn btn-danger">Delete</button>
+                <button id="deleteUserBtn" type="submit" class="btn btn-danger">Delete User</button>
             </div>
         </div>
         <!-- Create User-->
@@ -100,7 +99,6 @@
                     <div class="form-group">
                         <button id="createUserBtn" type="submit" class="btn btn-primary">Create</button>
                     </div>
-
                 </div>
             </div>
         </div>
