--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasetsV2.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasetsV2.html
@@ -186,8 +186,6 @@
     <script src="https://cdn.socket.io/3.0.3/socket.io.min.js"></script>
     <script>
         let selectedDatasetName = ""
-        // document.getElementById('downloadDatasetBtn').disabled = true
-        document.getElementById('deleteDatasetBtn').disabled = true
         window.addEventListener("DOMContentLoaded", renderDatasetList())
         function renderDatasetList() {
             getDatasets().then(datasets => {
@@ -244,6 +242,7 @@
                 }
             });
         }
+        
         document.getElementById("downloadDatasetBtn").addEventListener("click", function () {
             if (selectedDatasetName) {
                 fetch('/downloadDataset', {
@@ -278,7 +277,7 @@
 
         // 监听删除按钮的点击事件
         document.getElementById("deleteDatasetBtn").addEventListener("click", function () {
-            if (selectedDatasetName) {  // 确保有选择的数据集
+            if (selectedDatasetName) { 
                 const isConfirmed = confirm("Are you sure you want to delete this dataset? This action cannot be undone.");
                 if (isConfirmed) {
                     fetch('/deleteDataset', {
@@ -293,7 +292,6 @@
                         .then(response => response.json())
                         .then(data => {
                             if (data.status === 'success') {
-                                // 更新数据集列表或其他所需操作
                                 renderDatasetList();
                             } else {
                                 alert(data.message);
@@ -306,7 +304,6 @@
             }
         });
         
-
         function updateDatasetList(data) {
             const datasetInfoDiv = document.getElementById('datasetInfo');
 
