--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasetsV2.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasetsV2.html
@@ -161,7 +161,8 @@
                                         <div class="upload-form-group">
                                             <h5 class="card-title">Dataset Info</h5>
                                             <div id="datasetInfo">
-                                                <!-- 数据将由JavaScript动态填充 -->
+                                                <!---->
+                                                <!-- The data will be dynamically populated by JavaScript -->
                                             </div>
                                             <div class="mt-3">
                                                 <button id="downloadDatasetBtn"
@@ -256,7 +257,7 @@
                 })
                     .then(response => response.json())
                     .then(data => {
-                        // 检查是否收到了URL列表
+                        // Check if we get the URL list
                         if (data.download_urls && Array.isArray(data.download_urls)) {
                             if (data.download_urls.length === 0) {
                                 alert("No files found for the selected dataset.");
@@ -275,7 +276,7 @@
             }
         });
 
-        // 监听删除按钮的点击事件
+        // Listen to the delete button 
         document.getElementById("deleteDatasetBtn").addEventListener("click", function () {
             if (selectedDatasetName) { 
                 const isConfirmed = confirm("Are you sure you want to delete this dataset? This action cannot be undone.");
@@ -307,7 +308,7 @@
         function updateDatasetList(data) {
             const datasetInfoDiv = document.getElementById('datasetInfo');
 
-            // 清除现有内容
+            // Clear all content 
             datasetInfoDiv.innerHTML = '';
 
             data.forEach(dataset => {
@@ -323,7 +324,7 @@
             <div><strong>Zskip:</strong> ${dataset.zskip}</div>
             <div><strong>Info:</strong> ${JSON.stringify(dataset.info)}</div>
         `;
-
+                
                 datasetInfoDiv.appendChild(datasetDiv);
             });
         }
