--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three_new popup.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three_new popup.html
@@ -237,7 +237,7 @@
                 <ul class="nav nav-tabs card-header-tabs flex-column">
                     <li class="nav-item">
                         <a class="nav-link px-2" data-toggle="tab" href="#datasetCard"><i
-                                class="fas fa-window-restore"></i> Data browser</a>
+                                class="fas fa-window-restore"></i> Data Browser</a>
                     </li>
                     <li id="tab1" class="nav-item">
                         <a id="imageTab" class="nav-link px-2" data-toggle="tab" href="#imageCard"><i
@@ -372,7 +372,6 @@
                     </div>
 
                     <hr class="m-1" />
-
                     <div style="overflow: scroll; max-height: 200px;">
                         <table class="table table-bordered">
                             <thead>
@@ -389,6 +388,7 @@
                         </table>
                     </div>
                 </div>
+                
                 <div id="viewCard" class="card-body tab-pane">
                     <p>This will save the camera viewport, slice, and image type to be able to return to.
                     </p>
