--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
@@ -65,6 +65,9 @@
 
         <a class="nav-link" id="datasets-link" href="/datasets"> <i class="fas fa-database"></i> Datasets
         </a>
+
+        <a class="nav-link" id="datasets-link" href="/datasetsNew"> <i class="fas fa-database"></i> DatasetsNew
+        </a>
         {% endif %}
       </ul>
 
