--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/accounts.html
@@ -293,6 +293,7 @@
                                                         <th scope="row">Email</th>
                                                         <td>Level</td>
                                                         <td>Logins</td>
+                                                        <td>Institution</td>
                                                         <td>Last Login</td>
                                                     </tr>`
                 for (let i = 0; i < data.length; i++) {
@@ -303,6 +304,7 @@
                                                                 <th scope="row">${data[i]['email']}</th>
                                                                 <td>${data[i]['level']}</td>
                                                                 <td>${data[i]['logins']}</td>
+                                                                <td>${data[i]['institution']}</td>
                                                                 <td>${date}</td>
                                                             </tr>`
                 }
